--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@
     right: 0px; 
 }
 
-#tnalak-img 
+#tnalak-img
 {
     position: relative;
     right: 0px;
@@ -53,8 +53,7 @@
     width: 461px; 
     height: 589px;
     opacity: 100%;
-    transition: opacity ease-in 0.3s;
-
+    transition: ease-in 0.3s;
 }
 
 /* background color for tnalak containter */ 
@@ -71,21 +70,34 @@
 
 /* this is an animation*/
 
-#tnalak-img:hover {
-    position: relative;
+#tnalak-container #tnalak-img:hover
+{
     opacity: 0%;
+}
+
+#tnalak-container #tnalak-hover-container:hover
+{
+    opacity: 100%;
 }
 
 #tnalak-hover-container
 {
-    width: 411px; 
+    width: 461px; 
     height: 589px;
     position: absolute;
-    top: 180px;
-    right: 25px;
-    
+    top: 0px;
+    right: 0px;
+    opacity: 0%;   
+    transition: opacity ease-in 0.3s;
+    background-color: #BD272C;
 }
 
+/*
+#tnalak-container #tnalak-hover-container:hover
+{
+    opacity: 100%;    
+}
+*/
 #tnalak-hover-title 
 {
     font-family: 'Bebas Neue', cursive;
@@ -94,6 +106,9 @@
     line-height: 1;
     color: #ffffff;                    
     position: relative;
+    padding-top: 180px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 #tnalak-hover-subtitle 
@@ -103,5 +118,7 @@
     text-align: right;
     font-size: 20px;
     color: #ffffff;
-    position: relative; 
+    position: relative;     
+    padding-top: 0px;
+    padding-right: 25px; 
 }
