--- a/styles.css
+++ b/styles.css
@@ -1,120 +1,204 @@
-.dose-title 
-{
-    color: #7E7E7E;
-    font-family: 'Bebas Neue', cursive;
-    position: fixed;
-    left: 71px;
-    top: 50px;
-    font-size: 30px;
-    transition: color ease-in 0.3s; 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.dose-title:hover
-{
-    color: #252525;
+body {
+  font-weight: 400;
 }
 
-#first-page
-{
-    background-color: #202020;
-    position: static;
-    
+header {
+  height: 100vh;
+  width: 100%;
+  display: flex;
 }
 
-#title 
-{
-    font-family: 'Bebas Neue', cursive;
-    font-size: 80px;
-    color: #202020;
-    position: absolute;
-    top: 249px;
-    margin-left: 71px;    
+#hero-content {
+  padding: 150px;
+  flex: 3;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-#stinger 
-{
-    font-family: 'Roboto';
-    font-style: italic;
-    font-size: 20px;
-    color: #515151;
-    position: absolute;
-    top: 355px;
-    margin-left: 350px;
-    object-position: 35% 100%;
+#hero-image {
+  flex: 2;
+  background-image: url("./images/tnalak.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-#xii-subtitle
-{
-    font-family: 'Open Sans';
-    font-size: 15px;
-    color: #6A6A6A;
-    position: relative;
-    top: 450px;
-    left: 71px;
+.logo {
+  font-size: 80px;
+  line-height: 96px;
+  color: #7e7e7e;
+  letter-spacing: 1rem;
+  font-family: "Bebas Neue";
 }
 
-#tnalak-img-container 
-{
-    position: absolute;
-    top: 0px;
-    right: 0px; 
+h1 {
+  text-transform: uppercase;
+  color: #202020;
+  font-size: 150px;
+  line-height: 180px;
+  font-family: "Bebas Neue";
 }
 
-#tnalak-img
-{
-    position: relative;
-    right: 0px;
-    object-fit: cover;
-    width: 461px; 
-    height: 589px;
+h2 {
+  font-size: 40px;
+  font-style: italic;
+  color: #515151;
+  line-height: 46.88px;
+  font-family: "Roboto";
+  text-align: right;
 }
 
-/* this is an animation*/
-
-#tnalak-container #tnalak-hover-container:hover
-{
-    opacity: 100%;
+h3 {
+  font-family: "Open Sans";
+  color: #6a6a6a;
+  font-size: 30px;
+  line-height: 40.85px;
 }
 
-#tnalak-hover-container
-{
-    width: 461px; 
-    height: 589px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    opacity: 0%;   
-    transition: opacity ease-in 0.3s;
-    background-color: #BD272C;
+main {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-basis: 1;
 }
 
-#tnalak-hover-title 
-{
-    font-family: 'Bebas Neue', cursive;
-    font-size: 80px;
-    text-align: right;
-    line-height: 1;
-    color: #ffffff;                    
-    position: relative;
-    padding-top: 180px;
-    padding-left: 25px;
-    padding-right: 25px;
+main .img {
+  height: 100%;
+  flex: 1;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-#tnalak-hover-subtitle 
-{
-    font-family: 'Open sans';
-    font-style: bold;
-    text-align: right;
-    font-size: 20px;
-    color: #ffffff;
-    position: relative;     
-    padding-top: 0px;
-    padding-right: 25px; 
+#img1 {
+  background-image: url("./images/young-fruit.jpg");
+  background-position: center;
 }
 
-#second-page 
-{
-    background-color: #BD272C;
-    position: relative;
+#img2 {
+  background-image: url("./images/Remini20220205130614443.jpg");
+}
+
+#img3 {
+  background-image: url("./images/FB_IMG_1599039450676.jpg");
+  background-position: right 35% bottom 45%;
+}
+
+#quote {
+  height: 100vh;
+  width: 100%;
+  padding: 150px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  position: relative;
+}
+
+#quote p {
+  font-family: "Open Sans";
+  font-size: 100px;
+  line-height: 138.18px;
+  color: #2f2f2f;
+  font-weight: 700;
+  padding: 100px;
+}
+
+.red {
+  color: #bd272c;
+}
+
+/* #quotation {
+  position: absolute;
+  font-family: "Bebas Neue" !important;
+  font-size: 1000px !important;
+  font-weight: 400;
+  color: #c4c4c4 !important;
+  /* top: 200px !important; */
+/* } */
+
+aside {
+  height: 100vh;
+  width: 100%;
+  background-color: #bd272c;
+  color: white;
+  display: flex;
+  padding: 100px;
+  flex-direction: column;
+  justify-content: end;
+}
+
+h4 {
+  font-family: "Bebas Neue";
+  font-size: 150px;
+  line-height: 180px;
+}
+
+aside p {
+  font-family: "Open Sans";
+  font-size: 50px;
+  line-height: 68.09px;
+}
+
+footer {
+  height: 50vh;
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding: 100px;
+  display: flex;
+}
+
+footer #branding {
+  flex: 1;
+}
+
+#brand-name {
+  font-family: "Bebas Neue";
+  font-size: 80px;
+  line-height: 96px;
+  padding-bottom: 50px;
+  display: block;
+}
+
+#brand-text {
+  color: #aaaaaa;
+  font-family: "Open Sans";
+  font-size: 30px;
+  line-height: 41px;
+}
+
+#brand-highlight {
+  /* /* font-family: "Bebas Neue"; * */
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+footer #links {
+  flex: 1;
+}
+
+#link-title,
+li {
+  font-family: "Open Sans";
+  font-size: 30px;
+  line-height: 40.85px;
+}
+
+ul {
+  list-style-type: none;
+  padding-top: 20px;
+}
+
+li {
+  padding: 10px 0;
+  color: #aaaaaa;
 }
